first bunch of literature references

--- a/background.tex
+++ b/background.tex
@@ -2,3 +2,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background}
 \label{sec:background}
+
+
+\subsection{Related Work}
+
+\citetitle{Bocchi:2016:MQE:3027947.3027949}
+
+\citetitle{5430142}
+
+\citetitle{Hora:2016:PEH:2940136.2940146}
+
+\citetitle{6038470}
+
+\citetitle{Gao:2017:PPT:3098603.3098606}
+
+\citetitle{danarrowing}
+
+\citetitle{6603203}
+
+\citetitle{6982293}
