more literature candidates

--- a/literature.bib
+++ b/literature.bib
@@ -1,3 +1,231 @@
+@article{balasubramanianweb,
+  title={Web Page Load Time: A Quality of Experience perspective.},
+  author={Balasubramanian, Aruna and Ryoo, Jihoon and Das, Samir}
+}
+
+@article{rossi2016web,
+  title={Web QoE: Moving beyond Google’s SpeedIndex},
+  author={Rossi, Dario and Bocchi, Enrico and De Cicco, Luca},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{selvidge1999long,
+  title={How long is too long to wait for a website to load},
+  author={Selvidge, Paula},
+  journal={Usability news},
+  volume={1},
+  number={2},
+  year={1999}
+}
+
+@INPROCEEDINGS{6263888,
+author={S. Egger and T. Hossfeld and R. Schatz and M. Fiedler},
+booktitle={2012 Fourth International Workshop on Quality of Multimedia Experience},
+title={Waiting times in quality of experience for web based services},
+year={2012},
+volume={},
+number={},
+pages={86-96},
+keywords={Internet;hypermedia;interactive systems;multimedia computing;user interfaces;video streaming;HTTP video streaming;TCP media streaming;UDP media streaming;Web based services;Web browsing;e-mail browsing;end-user quality perception;file downloads;interactive data services;multimedia experience;online picture viewing;online video services;perception principles;quality-of-experience;waiting times;Bandwidth;Delay;Humans;Psychology;Streaming media;Tutorials;Web pages;Initial Delay;QoE;Stalling;Subjective Tests;Waiting Time Perception;Web QoE;YouTube Video Streaming},
+doi={10.1109/QoMEX.2012.6263888},
+ISSN={},
+month={July},}
+
+@article{doi:10.1080/01449290410001669914,
+author = {Fiona Fui-Hoon Nah},
+title = {A study on tolerable waiting time: how long are Web users willing to wait?},
+journal = {Behaviour \& Information Technology},
+volume = {23},
+number = {3},
+pages = {153-163},
+year  = {2004},
+publisher = {Taylor & Francis},
+doi = {10.1080/01449290410001669914}, 
+URL = {https://doi.org/10.1080/01449290410001669914},
+eprint = {https://doi.org/10.1080/01449290410001669914}
+}
+
+@INPROCEEDINGS{6363769,
+author={S. Egger and P. Reichl and T. Hoßfeld and R. Schatz},
+booktitle={2012 IEEE International Conference on Communications (ICC)},
+title={ #x201C;Time is bandwidth #x201D;? Narrowing the gap between subjective time perception and Quality of Experience},
+year={2012},
+volume={},
+number={},
+pages={1325-1330},
+keywords={Web services;hypermedia;quality of service;transport protocols;HTTP-based application;Web QoE assessment;Web browsing;data service;human time perception;logarithmic law;quality of experience;subjective time perception;temporal aspect;Bandwidth;Context;Humans;Psychology;Quality of service;Time measurement;Web pages;Psychophysics;Quality of Experience;Quality of Service;Weber-Fechner Law;interactive Data Services},
+doi={10.1109/ICC.2012.6363769},
+ISSN={1550-3607},
+month={June},}
+
+@article{Qi:2009:WPC:1459352.1459357,
+ author = {Qi, Xiaoguang and Davison, Brian D.},
+ title = {Web Page Classification: Features and Algorithms},
+ journal = {ACM Comput. Surv.},
+ issue_date = {February 2009},
+ volume = {41},
+ number = {2},
+ month = feb,
+ year = {2009},
+ issn = {0360-0300},
+ pages = {12:1--12:31},
+ articleno = {12},
+ numpages = {31},
+ url = {http://doi.acm.org/10.1145/1459352.1459357},
+ doi = {10.1145/1459352.1459357},
+ acmid = {1459357},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Categorization, Web mining},
+} 
+
+@Inbook{Choi2005,
+author="Choi, B.
+and Yao, Z.",
+editor="Chu, Wesley
+and Young Lin, Tsau",
+title="Web Page Classification*",
+bookTitle="Foundations and Advances in Data Mining",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="221--274",
+abstract="This chapter describes systems that automatically classify web pages into meaningful categories. It first defines two types of web page classification: subject based and genre based classifications. It then describes the state of the art techniques and subsystems used to build automatic web page classification systems, including web page representations, dimensionality reductions, web page classifiers, and evaluation of web page classifiers. Such systems are essential tools for Web Mining and for the future of Semantic Web.",
+isbn="978-3-540-32393-8",
+doi="10.1007/11362197_9",
+url="https://doi.org/10.1007/11362197_9"
+}
+
+
+@inproceedings{attardi1999automatic,
+  title={Automatic Web page categorization by link and context analysis},
+  author={Attardi, Giuseppe and Gull{\`\i}, Antonio and Sebastiani, Fabrizio},
+  booktitle={Proceedings of THAI},
+  volume={99},
+  number={99},
+  pages={105--119},
+  year={1999}
+}
+
+@inproceedings{Shen:2004:WCT:1008992.1009035,
+ author = {Shen, Dou and Chen, Zheng and Yang, Qiang and Zeng, Hua-Jun and Zhang, Benyu and Lu, Yuchang and Ma, Wei-Ying},
+ title = {Web-page Classification Through Summarization},
+ booktitle = {Proceedings of the 27th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+ series = {SIGIR '04},
+ year = {2004},
+ isbn = {1-58113-881-4},
+ location = {Sheffield, United Kingdom},
+ pages = {242--249},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1008992.1009035},
+ doi = {10.1145/1008992.1009035},
+ acmid = {1009035},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {content body, web page categorization, web page summarization},
+}
+
+@inproceedings{Buscher:2009:YSY:1518701.1518705,
+ author = {Buscher, Georg and Cutrell, Edward and Morris, Meredith Ringel},
+ title = {What Do You See when You'Re Surfing?: Using Eye Tracking to Predict Salient Regions of Web Pages},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '09},
+ year = {2009},
+ isbn = {978-1-60558-246-7},
+ location = {Boston, MA, USA},
+ pages = {21--30},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1518701.1518705},
+ doi = {10.1145/1518701.1518705},
+ acmid = {1518705},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {eye tracking, web design},
+} 
+
+@article{Bojko:2006:UET:2835663.2835665,
+ author = {Bojko, Agnieszka},
+ title = {Using Eye Tracking to Compare Web Page Designs: A Case Study},
+ journal = {J. Usability Studies},
+ issue_date = {May 2006},
+ volume = {1},
+ number = {3},
+ month = may,
+ year = {2006},
+ issn = {1931-3357},
+ pages = {112--120},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2835663.2835665},
+ acmid = {2835665},
+ publisher = {Usability Professionals' Association},
+ address = {Bloomingdale, IL},
+ keywords = {case study, design comparison, design evaluation, eye tracking, visual search},
+} 
+
+@inproceedings{Goldberg:2002:ETW:507072.507082,
+ author = {Goldberg, Joseph H. and Stimson, Mark J. and Lewenstein, Marion and Scott, Neil and Wichansky, Anna M.},
+ title = {Eye Tracking in Web Search Tasks: Design Implications},
+ booktitle = {Proceedings of the 2002 Symposium on Eye Tracking Research \& Applications},
+ series = {ETRA '02},
+ year = {2002},
+ isbn = {1-58113-467-3},
+ location = {New Orleans, Louisiana},
+ pages = {51--58},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/507072.507082},
+ doi = {10.1145/507072.507082},
+ acmid = {507082},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Eye Tracking, Software, Usability Evaluation, World Wide Web},
+} 
+
+@inproceedings{Pan:2004:DWP:968363.968391,
+ author = {Pan, Bing and Hembrooke, Helene A. and Gay, Geri K. and Granka, Laura A. and Feusner, Matthew K. and Newman, Jill K.},
+ title = {The Determinants of Web Page Viewing Behavior: An Eye-tracking Study},
+ booktitle = {Proceedings of the 2004 Symposium on Eye Tracking Research \& Applications},
+ series = {ETRA '04},
+ year = {2004},
+ isbn = {1-58113-825-3},
+ location = {San Antonio, Texas},
+ pages = {147--154},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/968363.968391},
+ doi = {10.1145/968363.968391},
+ acmid = {968391},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {eye tracking, individual differences, web page, world wide web},
+} 
+
+@inproceedings{strehl2000impact,
+  title={Impact of similarity measures on web-page clustering},
+  author={Strehl, Alexander and Ghosh, Joydeep and Mooney, Raymond},
+  booktitle={Workshop on artificial intelligence for web search (AAAI 2000)},
+  volume={58},
+  pages={64},
+  year={2000}
+}
+
+@inproceedings{Kan:2004:WPC:1013367.1013426,
+ author = {Kan, Min-Yen},
+ title = {Web Page Classification Without the Web Page},
+ booktitle = {Proceedings of the 13th International World Wide Web Conference on Alternate Track Papers \&Amp; Posters},
+ series = {WWW Alt. '04},
+ year = {2004},
+ isbn = {1-58113-912-8},
+ location = {New York, NY, USA},
+ pages = {262--263},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/1013367.1013426},
+ doi = {10.1145/1013367.1013426},
+ acmid = {1013426},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {abbreviation expansion, text categorization, uniform resource locator, word segmentation},
+} 
+
 @article{Bocchi:2016:MQE:3027947.3027949,
  author = {Bocchi, Enrico and De Cicco, Luca and Rossi, Dario},
  title = {Measuring the Quality of Experience of Web Users},
